feat: add navbar

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Full Stack Development Assignment" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Full Stack Development Assignment</title>
+    <title>BannerBites</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
