--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://webgazer.cs.brown.edu/webgazer.js"></script>
   </body>
 </html>
